<resources>
    <string name="app_name">Ccn</string>
    <string name="gobang">下棋</string>
    <string name="message">聊天</string>
    <string name="contacts">联系人</string>
    <string name="splash_intro">A graduation project for a person in September 2016</string>
    <string name="splash_intro_chinese">一个毕设给2016年9月的某人</string>
    <string name="result">结果。。。变成了聊天软件</string>
    <string name="gobangGame">毕设：五子棋游戏</string>
    <string name="inputaccount">请输入帐号</string>
    <string name="inputpassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="at_your_in_group">%s @ you in group chat</string>
    <string name="choose_contact">选择联系人</string>
    <string name="registration_failed_without_permission">Registration failed, without permission!</string>
    <string name="Registration_failed">注册失败</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="user_forbidden">用户被服务器限制连接</string>
    <string name="placeholder_nodata_title">暂无更多数据</string>
    <string name="placeholder_empty"></string>
    <string name="refuse">拒绝</string>
    <string name="Are_agree_with">正在同意……</string>
    <string name="Agree_with_failure">同意失败:</string>
    <string name="add_friend">添加好友</string>
    <string name="loginout">退出登录</string>
</resources>
