<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dot_color"
    tools:context="com.lyf.gobangccn.ui.splash.SplashActivity">
<LinearLayout
    android:id="@+id/ll_splash"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/gobangGame"
        android:textColor="@color/text_white"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tv_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/splash_intro"
        android:textColor="@color/text_white"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/splash_intro_chinese"
        android:textColor="@color/text_white"
        android:textSize="20sp"/>


</LinearLayout>
</RelativeLayout>
